--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Africana - A supersonic growing modeling agency with over 40 offices and over 8,000 models spread across the continent of Africa, the brain child of Simi is dedicated to spreading the beauty of African women with the rest of the world."
     />
     <link rel="shortcut icon" href="./logowhite.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
