--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,43 @@
       name="description"
       content="Africana - A supersonic growing modeling agency with over 40 offices and over 8,000 models spread across the continent of Africa, the brain child of Simi is dedicated to spreading the beauty of African women with the rest of the world."
     />
+    <meta
+      property="og:title"
+      content="Africana - A modelling agency"
+    />
+    <meta
+    property="og:image"
+    content="./af.png"
+  />
+    <meta
+    property="og:description"
+    content="Africana - A supersonic growing modeling agency with over 40 offices and over 8,000 models spread across the continent of Africa, the brain child of Simi is dedicated to spreading the beauty of African women with the rest of the world."
+  />
+  <meta
+      property="twitter:card"
+      content="summary_large_image"
+    />
+  <meta
+      property="twitter:title"
+      content="Africana - A modelling agency"
+    />
+  <meta
+    property="twitter:description"
+    content="Africana - A supersonic growing modeling agency with over 40 offices and over 8,000 models spread across the continent of Africa, the brain child of Simi is dedicated to spreading the beauty of African women with the rest of the world."
+  />
+  <meta
+      property="twitter:site"
+      content="@debanjo_israel"
+    />
+    <meta
+    property="twitter:image"
+    content="./af.png"
+  />
+    <meta
+      property="twitter:creator"
+      content="@debanjo_israel"
+        />
+
     <link rel="shortcut icon" href="./logowhite.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
