--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     />
     <meta
     property="og:image"
-    content="./af.png"
+    content="af.png"
   />
     <meta
     property="og:description"
@@ -39,7 +39,7 @@
     />
     <meta
     property="twitter:image"
-    content="./af.png"
+    content="af.png"
   />
     <meta
       property="twitter:creator"
